@@ -490,14 +490,7 @@ To indicate that a feature or spec relates to one or more issues in an external 
 
 [source,groovy]
 ----
-@Issue("http://my.issues.org/FOO-1")
-class MySpec {
-  @Issue("http://my.issues.org/FOO-2")
-  def "Foo should do bar"() { ... }
-
-  @Issue(["http://my.issues.org/FOO-3", "http://my.issues.org/FOO-4"])
-  def "I have two related issues"() { ... }
-}
+include::{sourcedir}/extension/IssueDocSpec.groovy[tag=example]
 ----
 
 If you have a common prefix URL for all issues in a project, you can use the <<Spock Configuration File>> to set it up
